--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -53,8 +53,8 @@ jobs:
       - name: Make application.properties
         run: |
           cd ./src/main/resources
-          touch ./application.yml
-          echo "${{ secrets.APPLICATION }}" > ./application.yml
+          touch ./application.properties
+          echo "${{ secrets.PROPERTIES }}" > ./application.properties
         shell: bash
 
       - name: Build with Gradle
