--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -3,11 +3,11 @@ name: CD with Gradle
 on:
   push:
     branches:
-      - deploy
+      - main
   pull_request:
     branches:
       - main
-      - deploy
+      - develop
 
 permissions:
   contents: read
