--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,13 @@
 version: '3'
 services:
 
+  redis:
+    image: redis
+    container_name: redis
+    ports:
+      - 6379:6379
+    restart: always
+
   web:
     container_name: web
     image: ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPO }}
