chore: Gemini, openai API 추가 (#41)

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,3 +27,14 @@ spring:
         auto: false
       stack:
         auto: false
+
+gemini:
+  api:
+    url: ${GEMINI_URL}
+    key: ${GEMINI_KEY}
+
+openai:
+  model: ${OPENAI_MODEL}
+  api:
+    url: https://api.openai.com/v1/chat/completions
+    key: ${OPENAI_KEY}
