--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,9 @@ dependencies {
 
 	//FCM
 	implementation 'com.google.firebase:firebase-admin:9.2.0'
+
+	//CODEF
+	implementation 'com.googlecode.json-simple:json-simple:1.1.1'
 }
 
 tasks.named('test') {
