--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -25,11 +25,12 @@ jobs:
           java-version: '17'
           distribution: "adopt"
 
-      - name: Make application.properties
+      - name: Make application.properties & Firebase Service Account Key
         run: |
           cd ./src/main/resources
           touch ./application.properties
           echo "${{ secrets.PROPERTIES }}" > ./application.properties
+          echo "${{ secrets.ONCE_FIREBASE_ADMINSDK }}" ./firebase/once-firebase-adminsdk.json
         shell: bash
 
       - name: Build with Gradle
@@ -51,11 +52,13 @@ jobs:
           java-version: '17'
           distribution: "adopt"
 
-      - name: Make application.properties
+      - name: Make application.properties & Firebase Service Account Key
         run: |
           cd ./src/main/resources
           touch ./application.properties
           echo "${{ secrets.PROPERTIES }}" > ./application.properties
+          echo "${{ secrets.ONCE_FIREBASE_ADMINSDK }}" ./firebase/once-firebase-adminsdk.json
+
         shell: bash
 
       - name: Build with Gradle
