feat: 카드 혜택 크롤링 자동화 (#56)

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -25,12 +25,14 @@ jobs:
           java-version: '17'
           distribution: "adopt"
 
-      - name: Make application.properties & Firebase Service Account Key
+      - name: Make application.properties & Firebase Service Account Key & DB Config
         run: |
           cd ./src/main/resources
           touch ./application.properties
           echo "${{ secrets.PROPERTIES }}" > ./application.properties
           echo "${{ secrets.ONCE_FIREBASE_ADMINSDK }}" ./firebase/once-firebase-adminsdk.json
+          cd ../java/ewha/lux/once/domain/card/service/crawling
+          echo "${{ secrets.RDS_CONFIG_INI }}" ./config.ini
         shell: bash
 
       - name: Build with Gradle
@@ -52,13 +54,14 @@ jobs:
           java-version: '17'
           distribution: "adopt"
 
-      - name: Make application.properties & Firebase Service Account Key
+      - name: Make application.properties & Firebase Service Account Key & DB Config
         run: |
           cd ./src/main/resources
           touch ./application.properties
           echo "${{ secrets.PROPERTIES }}" > ./application.properties
           echo "${{ secrets.ONCE_FIREBASE_ADMINSDK }}" ./firebase/once-firebase-adminsdk.json
-
+          cd ../java/ewha/lux/once/domain/card/service/crawling
+          echo "${{ secrets.RDS_CONFIG_INI }}" ./config.ini
         shell: bash
 
       - name: Build with Gradle
