fix: 크롤링 자동화 오류 해결 -ing (#66)

--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,8 @@ dependencies {
 
 	//CODEF
 	implementation 'com.googlecode.json-simple:json-simple:1.1.1'
+
+	implementation 'commons-io:commons-io:2.11.0'
 }
 
 tasks.named('test') {
