--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -91,5 +91,5 @@ jobs:
             sudo docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
             sudo docker rm -f $(docker ps -qa)
             sudo docker pull ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPO }}
-            docker-compose up -d
-            docker image prune -f
+            sudo docker-compose up -d
+            sudo docker image prune -f
