fix: 크롤링 로그 출력 문제 해결 (#66)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,3 +12,9 @@ services:
     environment:
       - TZ=Asia/Seoul
     shm_size: 2gb
+    logging:
+      driver: json-file
+      options:
+        mode: non-blocking
+    stdin_open: true
+    tty: true
