--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -91,3 +91,4 @@ jobs:
             sudo docker pull ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPO }}
             sudo docker-compose up -d
             sudo docker image prune -f
+            sudo docker exec -i -t redis redis-cli
