--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   data:
     redis:
-      host: redis
+      host: ${EC2_IPV4}
       port: 6379
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
