test: redis 데이터 보존

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,9 @@ services:
     container_name: redis
     ports:
       - 6379:6379
-    restart: always
+    volumes:
+      - redis-data:/data
+    restart: unless-stopped
 
   web:
     container_name: web
